@@ -38,6 +38,8 @@
 # When run as root, drop privileges to this user and its primary group.
 # Leave blank to stay as root, but this is not recommended.
 # If run as a non-root user, this setting has no effect.
+# Note that on Windows this has no effect and so mosquitto should be started by
+# the user you wish it to run as.
 #user mosquitto
 
 # The maximum number of messages currently inflight per client. This includes
